Create user controller
