# rentalx/src/swagger.json
@@ -15,10 +15,10 @@
         "summary": "Create a category",
         "description": "Create a new category",
         "requestBody": {
-          "content":{
+          "content": {
             "application/json": {
               "schema": {
-                "type":"object",
+                "type": "object",
                 "properties": {
                   "name": {
                     "type": "string"
@@ -29,30 +29,30 @@
                 },
                 "example": {
                   "name": "category name sample",
-                  "description":"Category description sample" 
+                  "description": "Category description sample"
                 }
               }
             }
           }
         },
         "responses": {
-          "201":{
+          "201": {
             "description": "Created"
           },
-          "500":{
+          "500": {
             "description": "Category already exists"
           }
         }
       },
       "get": {
-        "tags":["Category"],
+        "tags": ["Category"],
         "summary": "List all categories",
         "description": "List all categories",
-        "responses":{
+        "responses": {
           "200": {
             "description": "Success",
-            "content":{
-              "application/json":{
+            "content": {
+              "application/json": {
                 "schema": {
                   "type": "array",
                   "items": {
@@ -60,8 +60,8 @@
                     "properties": {
                       "name": {
                         "type": "string"
-                      }, 
-                      "description":{
+                      },
+                      "description": {
                         "type": "string"
                       }
                     }
@@ -70,6 +70,68 @@
               }
             }
           }
+        }
+      }
+    },
+    "/categories/import": {
+      "post": {
+        "tags": ["Category"],
+        "summary": "Upload new category",
+        "description": "Upload new category",
+        "requestBody": {
+          "content": {
+            "multpart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "file": "string",
+                  "format": "binary"
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "descriptions": "Created"
+          }
+        }
+      }
+    },
+    "/specifications": {
+      "post": {
+        "tags": ["Specifications"],
+        "summary": "Create a specification",
+        "description": "Create a new specification",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/Specification"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Specification already exists!"
+          }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "Specification": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
         }
       }
     }
